--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -223,7 +223,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£35.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div><br>
           </div>
@@ -254,7 +254,7 @@
                 </span>
               </div>
               <p style="font-weight: 900;">£18.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div>
           </div>
@@ -282,7 +282,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£19.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div>
           </div>
@@ -311,7 +311,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£25.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light " style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div>
           </div>
@@ -329,63 +329,63 @@
 
     <!-- section 3 -->
 
-    <!-- 
+    
   <div class="contaniner-fluid mt-5" style="display: flex; justify-content: center;">
-    <div class="row mt-5">
+    <div class="row mt-5 m-3">
       <div class="col-lg-12">
         <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
           <div class="row g-0 p-3">
-            <div class="col-md-10">
+            <div class="col-md-12">
               <div class="card-body">
                 <h2 class="card-title">Farm Fresh Fruits</h2>
                 <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
+                <a href="juice"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
                   arrow_right_alt
-                  </span></button>
+                  </span></button></a>
               </div>
             </div>
-            <div class="col-md-2">
-              <img src="lemon.jpg" width="90%" class="img-fluid rounded-start" alt="...">
+            <!-- <div class="col-md-2">
+              <img src="/user/lemon.jpg" width="90%" class="img-fluid rounded-start" alt="...">
               
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
       <div class="col-lg-12">
         <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
           <div class="row g-0 p-3">
-            <div class="col-md-10">
+            <div class="col-md-12">
               <div class="card-body">
                 <h2 class="card-title">Fresh Vegetables</h2>
                 <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
+                <a href="groceries"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
                   arrow_right_alt
-                  </span></button>
+                  </span></button></a>
               </div>
             </div>
-            <div class="col-md-2">
-              <img src="cabage.jpg" width="90%" class="img-fluid rounded-start" alt="...">
+            <!-- <div class="col-md-2">
+              <img src="/user/cabage.jpg" width="90%" class="img-fluid rounded-start" alt="...">
               
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
       <div class="col-lg-12">
         <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
           <div class="row g-0 p-3">
-            <div class="col-md-10">
+            <div class="col-md-12">
               <div class="card-body">
                 <h2 class="card-title">Organic Legume</h2>
                 <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
+                <a href="everything"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
                   arrow_right_alt
-                  </span></button>
+                  </span></button></a>
               </div>
             </div>
-            <div class="col-md-2">
-              <img src="payar.jpg" width="70%" class="img-fluid rounded-start" alt="...">
+            <!-- <div class="col-md-2">
+              <img src="/user/payar.jpg" width="10%" class="img-fluid rounded-start" alt="...">
               
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -393,7 +393,7 @@
       
     </div>
   </div>
- -->
+
 
 
     <!-- section 4 -->
@@ -436,7 +436,7 @@
         </div>
       </div>
 
-      <div class="row p-2">
+      <div class="row p-3">
         <div class="col-lg-3 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center;">
           <div class="card " style="width: 13rem; border: none; ">
             <img class="card-img-top" src="/user/s2p1.jpg" alt="Card image cap">
@@ -459,7 +459,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£35.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div><br>
           </div>
@@ -470,7 +470,7 @@
             <img class="card-img-top" src="/user/juice.jpg" alt="Card image cap">
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Juice</p>
-              <h6 class="card-text">Fresh Orange Juice
+              <h6 class="card-text">Orange Juice
               </h6>
               <div>
                 <span class="material-symbols-outlined">
@@ -490,7 +490,7 @@
                 </span>
               </div>
               <p style="font-weight: 900;">£18.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div><br>
           </div>
@@ -518,7 +518,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£19.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div>
           </div>
@@ -528,7 +528,7 @@
             <img class="card-img-top" src="/user/s2p3.jpg" alt="Card image cap">
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Groceries</p>
-              <h6 class="card-text">Handpicked Chillies
+              <h6 class="card-text">Red Chillies
               </h6>
               <span class="grade"><span class="material-symbols-outlined">
                   grade
@@ -546,7 +546,7 @@
                   grade
                 </span></span>
               <p style="font-weight: 900;">£25.00</p>
-              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .8rem;">ADD TO
+              <button class="btn px-4 text-light" style="background-color: #72a339; font-size: .7rem;">ADD TO
                 CART</button>
             </div>
           </div>
