--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -118,10 +118,12 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
             mattis,
             pulvinar dapibus leo.</p>
-          <button style="background-color: #72a339; color: white ; font-weight: 600; display: inline-flex"
-            class="btn p-3 px-5"><span class="material-symbols-outlined">
-              shopping_cart
-            </span>&nbsp;&nbsp;SHOP NOW</button>
+          <a href="everything">
+            <button style="background-color: #72a339; color: white ; font-weight: 600; display: inline-flex"
+              class="btn p-3 px-5"><span class="material-symbols-outlined">
+                shopping_cart
+              </span>&nbsp;&nbsp;SHOP NOW</button>
+          </a>
         </div>
       </div>
     </div>
@@ -329,70 +331,79 @@
 
     <!-- section 3 -->
 
-    
-  <div class="contaniner-fluid mt-5" style="display: flex; justify-content: center;">
-    <div class="row mt-5 m-3">
-      <div class="col-lg-12">
-        <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-          <div class="row g-0 p-3">
-            <div class="col-md-12">
-              <div class="card-body">
-                <h2 class="card-title">Farm Fresh Fruits</h2>
-                <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <a href="juice"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
-                  arrow_right_alt
-                  </span></button></a>
+
+    <div class="contaniner-fluid mt-5" style="display: flex; justify-content: center;">
+      <div class="row mt-5 m-3">
+        <div class="col-lg-12">
+          <div class="card mb-3"
+            style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+            <div class="row g-0 p-3">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Farm Fresh Fruits</h2>
+                  <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
+                  <a href="juice"><button class="btn px-4"
+                      style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
+                      NOW&nbsp;<span class="material-symbols-outlined">
+                        arrow_right_alt
+                      </span></button></a>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-md-2">
+              <!-- <div class="col-md-2">
               <img src="/user/lemon.jpg" width="90%" class="img-fluid rounded-start" alt="...">
               
             </div> -->
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-12">
-        <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-          <div class="row g-0 p-3">
-            <div class="col-md-12">
-              <div class="card-body">
-                <h2 class="card-title">Fresh Vegetables</h2>
-                <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <a href="groceries"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
-                  arrow_right_alt
-                  </span></button></a>
+        <div class="col-lg-12">
+          <div class="card mb-3"
+            style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+            <div class="row g-0 p-3">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Fresh Vegetables</h2>
+                  <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
+                  <a href="groceries"><button class="btn px-4"
+                      style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
+                      NOW&nbsp;<span class="material-symbols-outlined">
+                        arrow_right_alt
+                      </span></button></a>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-md-2">
+              <!-- <div class="col-md-2">
               <img src="/user/cabage.jpg" width="90%" class="img-fluid rounded-start" alt="...">
               
             </div> -->
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-12">
-        <div class="card mb-3" style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-          <div class="row g-0 p-3">
-            <div class="col-md-12">
-              <div class="card-body">
-                <h2 class="card-title">Organic Legume</h2>
-                <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                <a href="everything"><button class="btn px-4" style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP NOW&nbsp;<span class="material-symbols-outlined">
-                  arrow_right_alt
-                  </span></button></a>
+        <div class="col-lg-12">
+          <div class="card mb-3"
+            style="max-width: 100vw; border: none; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+            <div class="row g-0 p-3">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Organic Legume</h2>
+                  <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
+                  <a href="everything"><button class="btn px-4"
+                      style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
+                      NOW&nbsp;<span class="material-symbols-outlined">
+                        arrow_right_alt
+                      </span></button></a>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-md-2">
+              <!-- <div class="col-md-2">
               <img src="/user/payar.jpg" width="10%" class="img-fluid rounded-start" alt="...">
               
             </div> -->
+            </div>
           </div>
         </div>
+
+
       </div>
-      
-      
     </div>
-  </div>
 
 
 
@@ -401,17 +412,19 @@
     <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-lg-12 p-5 " style=" display: inline-flex; background-color: black;">
-          <div class="col-lg-10 col-md-8 col-sm-8 ">
-            <h1 style="color: white;">Get 25% Off On Your First Purchase!</h1>
+          <div class="col-lg-9 col-md-8 col-sm-8 ">
+            <h2 style="color: white;">Get 25% Off On Your First Purchase!</h2>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4 "
+          <div class="col-lg-3 col-md-4 col-sm-4 "
             style="display: inline-flex; justify-content:center; align-items:center;">
-            <button class="btn px-4"
-              style=" display: flex; justify-content: center; background-color: #72a339; color:white; font-weight:600;"><span
-                class="material-symbols-outlined">
-                shopping_cart
-              </span>&nbsp;&nbsp;SHOP
-              NOW</button>
+            <a href="everything">
+              <button class="btn px-4"
+                style=" display: flex; justify-content: center; background-color: #72a339; color:white; font-weight:600;"><span
+                  class="material-symbols-outlined">
+                  shopping_cart
+                </span>&nbsp;&nbsp;SHOP
+                NOW</button>
+            </a>
 
           </div>
         </div>
@@ -605,16 +618,18 @@
           <div class="card rbg p-4 "
             style="color: white; width: 18rem; height: 22rem; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
             <div class="card-body text-center ">
-              <h1>Deal Of The Day 15% Off On All Vegetables!</h1>
-              <h6 class="card-subtitle mb-2 rh6" style="color: white;">
+              <h2>Deal Of The Day 15% Off On All Vegetables!</h2>
+              <h6 class="card-subtitle mb-2 m5-1 rh6" style="color: white;">
                 I am text block. Click edit button to change this tex em ips.
               </h6>
               <img src="" width="120%" alt="">
-              <button class="btn px-4"
-                style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
-                NOW&nbsp;<span class="material-symbols-outlined">
-                  arrow_right_alt
-                </span></button>
+              <a href="groceries">
+                <button class="btn px-4"
+                  style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
+                  NOW&nbsp;<span class="material-symbols-outlined">
+                    arrow_right_alt
+                  </span></button>
+              </a>
             </div>
           </div>
         </div>
@@ -676,72 +691,17 @@
     </div>
 
 
-    <!-- section 7 -->
-
-
-    <div class="container-fluid" style="border-bottom: 1px solid #ccc; background-color: #001524;">
-      <div class="row p-5">
-        <div class="col-lg-4" style="color: rgb(155, 155, 155) ;">
-          <img src="/user/footerlogo.png" alt="">
-          <h5>Maecenas mi justo, interdum at consectetur vel, tristique et arcu. Ut quis eros blandit, ultrices diam in,
-            elementum ex. Suspendisse quis faucibus urna. Suspendisse pellentesque.</h5>
-        </div>
-        <div class="col-lg-4" style="display: flex; flex-direction: column;">
-          <br>
-          <h5 style="color: white;">Quick Links</h5>
-          <a href="">About</a>
-          <a href="">Cart</a>
-          <a href="">Checkout</a>
-          <a href="">Contact</a>
-          <a href="">Home</a>
-          <a href="">My account</a>
-          <a href="">Shop</a>
-          <br>
-          <h5 style="color: white;">Site Links</h5>
-          <a href="">Privacy Policy</a>
-          <a href="">Shipping Details</a>
-          <a href="">Offers Coupons</a>
-          <a href="">Terms & Conditions</a>
-        </div>
-        <div class="col-lg-4" style="display: flex; flex-direction: column;">
-          <h5 style="color: white;">
-            <br>
-            Download Our Mobile App
-          </h5>
-          <p style="color: rgb(155, 155, 155) ;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam
-            gravida sollicitudin. Praesent porta enim mi, non tincidunt libero interdum sit amet.
-          </p>
-          <br>
-          <h5 style="color: white;">Quick Links</h5>
-          <a href="">Know More About Us</a>
-          <a href="">Visit Store</a>
-          <a href="">Let’s Connect</a>
-          <a href="">Locate Stores</a>
-          <br>
-          <span>
-            <img width="40%" src="/user/playstore.png" alt="">
-            <img width="40%" src="/user/appstore.png" alt="">
-          </span>
-        </div>
-      </div>
-    </div>
-
 
     <!-- footer -->
 
-
-    <footer class="p-3" style="height: 15vh; background-color: #001524; color: rgb(155, 155, 155)  ;">
-      <h6>Copyright © 2023 | Organic <br> Store</h6>
-
-
-    </footer>
+    <%- include('footer') %>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
