--- a/views/user/about.html
+++ b/views/user/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Organic Store</title>
-    <link rel="shortcut icon" href="/user/favi.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/user/favi.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,13 @@
             font-family: 'Playfair Display', serif;
             font-weight: 600;
         }
-
+        a {
+        text-decoration: none;
+        color: rgb(155, 155, 155);
+    }
+        a:hover {
+        color: white;
+    }
         /* .b {
             background-color: #f5f5f5;
         } */
@@ -35,13 +41,73 @@
                 'GRAD' 0,
                 'opsz' 24
         }
+        .basket {
+      color: #8bc34a;
+    }
+    .nav-link:hover {
+      color: #8bc34a;
+    }
     </style>
     </style>
 </head>
 
 <body>
-    <!-- Including Navbar -->
-    <%- include('navbar') %>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/public/user/logo.svg" height="75" alt="MDB Logo" loading="lazy" />
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="everything.html">Everything</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="groceries.html">Groceries</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="juice.html">Juice</a>
+              </li>
+            </ul>
+            <div class="d-flex" role="search">
+              <ul class="navbar-nav d-flex me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color: #8bc34a; font-weight: 600;" href="#"><bdi><span
+                        class="woocommerce-Price-currencySymbol">£</span>0.00</bdi></a>
+                </li style="color: #8bc34a;">
+      
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><span class="ast-icon icon-basket basket">
+                      <svg style="color: #8bc34a;" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="ast-basket-icon-svg" x="0px" y="0px"
+                        width="20" height="20" viewBox="826 826 140 140" xml:space="preserve">
+                        <path
+                          d="M955.418,887.512c2.344,0,4.343,0.829,6.002,2.486c1.657,1.659,2.486,3.659,2.486,6.002c0,2.343-0.829,4.344-2.486,6.001  c-1.659,1.658-3.658,2.487-6.002,2.487h-0.994l-7.627,43.9c-0.354,2.033-1.326,3.713-2.917,5.04  c-1.593,1.326-3.405,1.989-5.438,1.989h-84.883c-2.033,0-3.846-0.663-5.438-1.989c-1.591-1.327-2.564-3.007-2.918-5.04l-7.626-43.9  h-0.995c-2.343,0-4.344-0.829-6.001-2.487c-1.658-1.657-2.487-3.658-2.487-6.001c0-2.343,0.829-4.343,2.487-6.002  c1.658-1.658,3.659-2.486,6.001-2.486H955.418z M860.256,940.563c1.149-0.089,2.111-0.585,2.885-1.491  c0.773-0.907,1.116-1.936,1.028-3.085l-2.122-27.586c-0.088-1.15-0.585-2.111-1.492-2.885c-0.906-0.774-1.934-1.117-3.083-1.028  c-1.149,0.088-2.111,0.586-2.885,1.492s-1.116,1.934-1.028,3.083l2.122,27.587c0.088,1.105,0.542,2.034,1.359,2.785  c0.818,0.752,1.78,1.128,2.885,1.128H860.256z M887.512,936.319v-27.587c0-1.149-0.42-2.144-1.26-2.984  c-0.84-0.84-1.834-1.26-2.984-1.26s-2.144,0.42-2.984,1.26c-0.84,0.841-1.26,1.835-1.26,2.984v27.587c0,1.149,0.42,2.145,1.26,2.984  c0.84,0.84,1.835,1.26,2.984,1.26s2.144-0.42,2.984-1.26C887.092,938.464,887.512,937.469,887.512,936.319z M912.977,936.319  v-27.587c0-1.149-0.42-2.144-1.26-2.984c-0.841-0.84-1.835-1.26-2.984-1.26s-2.145,0.42-2.984,1.26  c-0.84,0.841-1.26,1.835-1.26,2.984v27.587c0,1.149,0.42,2.145,1.26,2.984s1.835,1.26,2.984,1.26s2.144-0.42,2.984-1.26  C912.557,938.464,912.977,937.469,912.977,936.319z M936.319,936.65l2.122-27.587c0.088-1.149-0.254-2.177-1.027-3.083  s-1.735-1.404-2.885-1.492c-1.15-0.089-2.178,0.254-3.084,1.028c-0.906,0.773-1.404,1.734-1.492,2.885l-2.122,27.586  c-0.088,1.149,0.254,2.178,1.027,3.085c0.774,0.906,1.736,1.402,2.885,1.491h0.332c1.105,0,2.066-0.376,2.885-1.128  C935.777,938.685,936.23,937.756,936.319,936.65z M859.66,855.946l-6.167,27.322h-8.753l6.698-29.245  c0.84-3.89,2.807-7.062,5.902-9.516c3.095-2.453,6.632-3.68,10.611-3.68h11.074c0-1.149,0.42-2.144,1.26-2.984  c0.84-0.84,1.835-1.26,2.984-1.26h25.465c1.149,0,2.144,0.42,2.984,1.26c0.84,0.84,1.26,1.834,1.26,2.984h11.074  c3.979,0,7.516,1.227,10.611,3.68c3.094,2.454,5.062,5.626,5.901,9.516l6.697,29.245h-8.753l-6.168-27.322  c-0.486-1.945-1.491-3.537-3.017-4.774c-1.525-1.238-3.282-1.857-5.272-1.857h-11.074c0,1.15-0.42,2.144-1.26,2.984  c-0.841,0.84-1.835,1.26-2.984,1.26h-25.465c-1.149,0-2.144-0.42-2.984-1.26c-0.84-0.84-1.26-1.834-1.26-2.984h-11.074  c-1.99,0-3.747,0.619-5.272,1.857C861.152,852.409,860.146,854,859.66,855.946z">
+                        </path>
+                      </svg></span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/views/admin/admin-dashboard.html"><span class="material-symbols-outlined">
+                      person
+                    </span></a>
+                </li>
+              </ul>
+            </div>
+      
+          </div>
+        </div>
+      </nav>
 
 
         <!-- About -->
@@ -50,7 +116,7 @@
             <div class="row b">
                 <div class="col-lg-12 mt-3 text-center">
                     <h1>About Us</h1>
-                    <img style="margin-bottom: -6vh;" src="/user/leaf2.png" alt="" width="10%">
+                    <img style="margin-bottom: -6vh;" src="/public/user/leaf2.png" alt="" width="10%">
                 </div>
             </div>
         </div>
@@ -76,7 +142,7 @@
 
                 </div>
                 <div class="col-lg-5 p-5 text-center">
-                    <img width="100%" src="/user/grapes.jpg" alt="">
+                    <img width="100%" src="/public/user/grapes.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -117,7 +183,7 @@
                 <div class="col-lg-6 p-5" style="display: flex; align-items: center; justify-content: center;">
 
                     <div class="card p-4" style="width: 20rem; border: none; background-color: #f5f5f5;">
-                        <img style="border-radius: .6rem; margin-top: -4rem;" src="/user/grape2.jpg" alt="">
+                        <img style="border-radius: .6rem; margin-top: -4rem;" src="/public/user/grape2.jpg" alt="">
                         <div class="card-body text-center">
                             <h5 class="card-title" style="color: rgb(255, 217, 0);"><span
                                     class="material-symbols-outlined">
@@ -137,7 +203,7 @@
                                 pulvinar
                                 dapibus leo.
                                 </p>
-                                <img src="/user/client1.png" width="15%" alt="">
+                                <img src="/public/user/client1.png" width="15%" alt="">
                                 <span>Mike Kunit</span>
                         </div>
                     </div>
@@ -146,7 +212,7 @@
                 <div class="col-lg-6 ">
                     <div class="row p-5">
                         <div class="col-lg-4">
-                            <img width="100%" src="/user/organicbadge.png" alt="">
+                            <img width="100%" src="/public/user/organicbadge.png" alt="">
                         </div>
                         <div class="col-lg-8 text-center ">
                             <h3>Certified Products</h3>
@@ -157,7 +223,7 @@
                             <h2 style="font-family: 'Playfair Display', serif; font-weight: 600; font-size: 2rem;">We
                                 Deal
                                 With Various Quality Organic Products!</h2><br>
-                            <img src="/user/leaf.png" alt="">
+                            <img src="/public/user/leaf.png" alt="">
                         </div>
 
                         <div class="col-lg-6 mt-4">
@@ -227,8 +293,61 @@
 
 
 
+        <div class="container-fluid" style="border-bottom: 1px solid #ccc; background-color: #001524;">
+            <div class="row p-5">
+                <div class="col-lg-4" style="color: rgb(155, 155, 155) ;">
+                    <img src="/public/user/footerlogo.png" alt="">
+                    <h5>Maecenas mi justo, interdum at consectetur vel, tristique et arcu. Ut quis eros blandit, ultrices diam
+                        in, elementum ex. Suspendisse quis faucibus urna. Suspendisse pellentesque.</h5>
+                </div>
+                <div class="col-lg-4" style="display: flex; flex-direction: column;">
+                    <br>
+                    <h5 style="color: white;">Quick Links</h5>
+                    <a href="">About</a>
+                    <a href="">Cart</a>
+                    <a href="">Checkout</a>
+                    <a href="">Contact</a>
+                    <a href="">Home</a>
+                    <a href="">My account</a>
+                    <a href="">Shop</a>
+                    <br>
+                    <h5 style="color: white;">Site Links</h5>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Shipping Details</a>
+                    <a href="">Offers Coupons</a>
+                    <a href="">Terms & Conditions</a>
+                </div>
+                <div class="col-lg-4" style="display: flex; flex-direction: column;">
+                    <h5 style="color: white;">
+                        <br>
+                        Download Our Mobile App</h5>
+                    <p style="color: rgb(155, 155, 155) ;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                        aliquam gravida sollicitudin. Praesent porta enim mi, non tincidunt libero interdum sit amet.
+                    </p>
+                    <br>
+                    <h5 style="color: white;">Quick Links</h5>
+                    <a href="">Know More About Us</a>
+                    <a href="">Visit Store</a>
+                    <a href="">Let’s Connect</a>
+                    <a href="">Locate Stores</a>
+                    <br>
+                    <span>
+                        <img width="40%" src="/public/user/playstore.png" alt="">
+                        <img width="40%" src="/public/user/appstore.png" alt="">
+                    </span>
+                </div>
+            </div>
+        </div>
+        
+        
         <!-- footer -->
-        <%- include('footer') %>
+        
+        
+        <footer class="p-3" style="height: 15vh; background-color: #001524; color: rgb(155, 155, 155)  ;">
+            <h6>Copyright © 2023 | Organic <br> Store</h6>
+        
+        
+        </footer>
 
 
 
